--- a/index.html
+++ b/index.html
@@ -14,76 +14,8 @@
 </head>
 <body>
 
-    <div class="container">
-
-        <header>
-            <img alt="Logo" src="images/logo.png">
-        </header>
-
-        <main>
-            <section id="Sottotitolo">
-                <h1>Corso Web Developer</h1>
-                <p>Smetti di inseguire i titoli, inizia a lavorare. Mentre tutti vogliono arricchire il CV, tu pensa ad arricchire le tue competenze.</p>
-                <div id="Bottone"><a href="#" target="">PARTIAMO!</a></div>
-            </section>
-
-            <section>
-                <h6>Tutti ti cercheranno</h6>
-                <p>Sono 30.000 in Italia le posizioni di developer scoperte, scegli quella che ti stimola di più.</p>
-
-                <h6>Lavora dove vuoi</h6>
-                <p>Lavora da casa, in riva al mare o in montagna.</p>
-                <div id="Tonda">
-                    <img src="images/notebook.jpg" alt="Foto0">
-                </div>
-                <h6>Scegli il tuo ruolo</h6>
-                <p>Potrai scegliere se essere Azienda, Freelance o Startup.</p>
-
-                <h6>Lavoro in libertà</h6>
-                <p>Non serve lavorare in ufficio per essere creatori di prodotti digitali.</p>
-
-                <section>
-                    <h5>Epicode garantisce</h5>
-                        <p><em>"3 mesi intensivi di corso che cambieranno radicalmente la tua vita".</em></p>
-                        <div>Mario Rossi</div>
-                        <div>CEO, Epicode</div>
-                    </blockquote>
-                </section>
-
-                <div class="bordo">
-                    <img src="images/foto1.jpg" alt="Foto1">
-                    <h6 >Il tuo PC</h6>
-                    <p>Se vuoi diventare developer è l’unico strumento di cui hai bisogno.</p>
-                </div>
-                
-                <div class="bordo">
-                    <img src="images/foto2.jpg" alt="Foto2">
-                    <h6>Impara ora</h6>
-                    <p>Impara da chi diventerai tra qualche anno, e diventa una rockstar come loro.</p>
-                </div>
-
-                <div class="bordo">
-                    <img src="images/foto3.jpg" alt="Foto3">
-                    <h6>Lavora subito</h6>
-                    <p>Sappiamo cosa vogliono le aziende, perché lavoriamo con loro.</p>
-                </div>
-            </section>
-
-        </main>
-
-        <footer>
-            <adress>
-                <h3>Contattaci</h3>
-                <img>
-                <a title="" href="mailto:">(+39)11223456</a> <br>
-                <img>
-                <a title="" href="mailto:">info@epicode.school</a>
-                <img>
-                <address> Via Appia 1 - 00100 Roma (RM)</address>
-            </adress>
-            <p>&copy 2021. Immagini di <a title="" href="">Pixabay</a>.</p>
-        </footer>
-
-    </div>
+ <div>
+    Voglio capire come funziona Git
+ </div>   
 </body>
 </html>
