--- a/index.html
+++ b/index.html
@@ -1,21 +1,91 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
-    <meta name="description" content="Da zero a Epicode con i corsi completi per diventare uno sviluppatore professionista in 3 mesi.">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Da zero a Epicode con i corsi completi per diventare uno sviluppatore professionista in 3 mesi.">
     <title>Corso Web Developer - Epicode school</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="Assets/css/reset.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&family=Open+Sans:wght@300;400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="Assets/css/style.css">
 </head>
 <body>
 
- <div>
-    Voglio capire come funziona Git
- </div>   
+    <header>      
+        <div id="logo">
+            <img src="Assets/img/logo.png" alt="logo">
+        </div>
+    </header>
+    <main>
+        <section id="first">
+            <h1>Corso Web Developer</h1>
+            <p>Smetti di inseguire i titoli, inizia a lavorare. Mentre tutti vogliono arricchire il CV, tu pensa ad arricchire le tue competenze.</p>
+            <button type="button">PARTIAMO!</button>
+        </section>
+
+        <section id="second">
+            <div class="right">
+                <h2>Tutti ti cercheranno</h2>
+                <p>Sono 30.000 in Italia le posizioni di developer scoperte, scegli quella che ti stimola di più.</p>
+            </div>
+            <div class="right">
+                <h2>Lavora dove vuoi</h2>
+                <p>Lavora da casa, in riva al mare o in montagna.</p>
+            </div>
+            <div>
+                <img src="Assets/img/notebook.jpg">
+            </div>
+            <div class="right">
+                <h2>Scegli il tuo ruolo</h2>
+                <p>Potrai scegliere se essere Azienda, Freelance o Startup.</p>
+            </div>
+            <div class="right">
+                <h2>Lavoro in libertà</h2>
+                <p>Non serve lavorare in ufficio per essere creatori di prodotti digitali.</p>
+            </div>
+
+        </section>
+
+        <section id="third">
+
+            <h3>Epicode garantisce</h3>
+            <p>"3 mesi intensivi di corso che cambieranno radicalmente la tua vita"</p>
+            <div><span>Mario Rossi</span><br>CEO Epicode</div>
+
+        </section>
+
+
+        <section id="fourth">
+            <div class="card">
+                <img src="Assets/img/foto1.jpg">
+                <h2>Il tuo PC</h2>
+                <p>Se vuoi diventare developer è l’unico strumento di cui hai bisogno.</p>
+            </div>
+            <div class="card">
+                <img src="Assets/img/foto2.jpg">
+                <h2>Impara ora</h2>
+                <p>Impara da chi diventerai tra qualche anno, e diventa una rockstar come loro.</p>
+            </div>
+            <div class="card">
+                <img src="Assets/img/foto3.jpg">
+                <h2>Lavora subito</h2>
+                <p>Sappiamo cosa vogliono le aziende, perché lavoriamo con loro.</p>
+            </div>
+            </section>
+
+            <footer>
+                <h3>Contattaci</h3>
+                <ul>
+                    <li><i class="fas fa-phone-alt"></i> <a href="#">+39 11223456</a></li>
+                    <li><i class="fas fa-solid fa-envelope"></i> <a href="mailto:info@epicode.school">info@epicode.school</a></li>
+                    <li><i class="fas fa-solid fa-map-pin"></i> <a href="#">Via Appia 1 - 00100 Roma (RM)</a></li>
+                </ul>
+                <hr>
+                <div id="copyright">&copy; 2021. Immagini di <a href="#">Pixabay</a></div></div>
+            </footer>
+    </main>
 </body>
 </html>
